<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="FB_SaMControllerTest" Id="{6ff05197-bef5-4f1d-a5de-30ca21e9774f}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_SaMControllerTest EXTENDS TcUnit.FB_TestSuite
VAR
	iTest			: INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[T01_WiazanieZmiennych ();
T02_PrzelaczanieTrybow ();
T03_PrzelaczanieStanow ();
]]></ST>
    </Implementation>
    <Method Name="T01_WiazanieZmiennych" Id="{042aa6bc-070d-4cb3-8194-fa074f7fecbd}">
      <Declaration><![CDATA[METHOD PROTECTED T01_WiazanieZmiennych
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF (TcUnit.TEST_ORDERED ('T01_WiazanieZmiennych')) THEN
	itest	:= 1;
	
	GVL_TestSaMContoller.stCommonData.itfTime			:= GVL_TestSaMContoller.fbTime;
	GVL_TestSaMContoller.stCommonData.itfLocaciotn		:= GVL_TestSaMContoller.fbLocation;
	GVL_TestSaMContoller.stCommonData.itfLogger			:= GVL_TestSaMContoller.fbLogger;

	GVL_TestSaMContoller.fbMySaMController.LinkSS1 (fbSS1	:= GVL_TestSaMContoller.flSS1);
	GVL_TestSaMContoller.fbMySaMController.LinkSTO (fbSTO	:= GVL_TestSaMContoller.flSTO);

	GVL_TestSaMContoller.fbMySaMController.LinkCommonData (stCommonData	:= GVL_TestSaMContoller.stCommonData);

	AssertEquals_UINT (Expected := 129, Actual := GVL_TestSaMContoller.fbMySaMController.uiNumberOfComponents, Message := 'T01 - bledna libcza lkomponentow');
	
	
	TcUnit.TEST_FINISHED ();
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="T02_PrzelaczanieTrybow" Id="{6342083c-2c32-4acf-b30c-3a43e3dd6caf}">
      <Declaration><![CDATA[METHOD PRIVATE T02_PrzelaczanieTrybow
VAR_INST
	iStep			: INT;
	eNewMode		: E_BaseMachineMode;
	eActualMode		: E_BaseMachineMode;
	
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF (TcUnit.TEST_ORDERED ('T02_PrzelaczanieTrybow')) THEN
	GVL_TestSaMContoller.fbMySaMController.ExecuteEveryCycle_Test ();
	GVL_TestSaMContoller.fbMySaMController.ExecuteEveryCycle_Operation ();
	GVL_TestSaMContoller.fbMySaMController.ExecuteEveryCycle_Status ();
	GVL_TestSaMContoller.fbMySaMController.ExecuteEveryCycle_Error ();
	CASE iStep OF
	0	:
		itest	:= 3;
		eNewMode			:= E_BaseMachineMode.Production;
		GVL_TestSaMContoller.fbMySaMController.Execute (iNumberOfCommand := eNewMode, eChangeCategory := E_SaMChangeCategory.eMode);
		iStep	:= iStep + 10;
	10	:	//pierwszy krok 
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeBusy (), 	Message := 'S10 - T01 - Bledny stan busy');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeDone (), 	Message := 'S10 - T02 - Bledny stan done');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeStatus (), Message := 'S10 - T03 - Bledny stan status');
		iStep	:= iStep + 10;
	20	://krok zmiany stanu
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeBusy (), 	Message := 'S20 - T01 - Bledny stan busy');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeDone (),	Message := 'S20 - T02 - Bledny stan done');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeStatus (), Message := 'S20 - T03 - Bledny stan status');
		iStep	:= iStep + 10;
	30	:	//ostani krok 
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeBusy (), 	Message := 'S30 - T01 - Bledny stan busy');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeDone (), 	Message := 'S30 - T02 - Bledny stan done');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeStatus (), 	Message := 'S30 - T03 - Bledny stan status');
		eActualMode				:= GVL_TestSaMContoller.fbMySaMController.GetMode ();
		AssertEquals (Expected := eNewMode, Actual := eActualMode, 						Message := 'S30 - T04 - Bledny stan');
		iStep	:= iStep + 10;
	40	:
		iStep	:= iStep + 10;
	50	:
		eNewMode			:= E_BaseMachineMode.Maintenance;
		GVL_TestSaMContoller.fbMySaMController.Execute (iNumberOfCommand := eNewMode, eChangeCategory := E_SaMChangeCategory.eMode);
		iStep	:= iStep + 10;
	60	:	//pierwszy krok 
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeBusy (), 	Message := 'S60 - T01 - Bledny stan busy');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeDone (), 	Message := 'S60 - T02 - Bledny stan done');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeStatus (), Message := 'S60 - T03 - Bledny stan status');
		iStep	:= iStep + 10;
	70	://krok zmiany stanu
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeBusy (), 	Message := 'S70 - T01 - Bledny stan busy');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeDone (),	Message := 'S70 - T02 - Bledny stan done');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeStatus (), Message := 'S70 - T03 - Bledny stan status');
		iStep	:= iStep + 10;
	80	:	//ostani krok 
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeBusy (), 	Message := 'S80 - T01 - Bledny stan busy');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeDone (), 	Message := 'S80 - T02 - Bledny stan done');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeStatus (), 	Message := 'S80 - T03 - Bledny stan status');
		eActualMode				:= GVL_TestSaMContoller.fbMySaMController.GetMode ();
		AssertEquals (Expected := eNewMode, Actual := eActualMode, 						Message := 'S80 - T04 - Bledny stan');
		iStep	:= iStep + 10;
	90	:
		iStep	:= iStep + 10;
	100	:
		eNewMode			:= E_BaseMachineMode.Manual;
		GVL_TestSaMContoller.fbMySaMController.Execute (iNumberOfCommand := eNewMode, eChangeCategory := E_SaMChangeCategory.eMode);
		iStep	:= iStep + 10;
	110	:	//pierwszy krok 
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeBusy (), 	Message := 'S110 - T01 - Bledny stan busy');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeDone (), 	Message := 'S110 - T02 - Bledny stan done');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeStatus (), Message := 'S110 - T03 - Bledny stan status');
		iStep	:= iStep + 10;
	120	://krok zmiany stanu
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeBusy (), 	Message := 'S120 - T01 - Bledny stan busy');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeDone (),	Message := 'S120 - T02 - Bledny stan done');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeStatus (), Message := 'S120 - T03 - Bledny stan status');
		iStep	:= iStep + 10;
	130	:	//ostani krok 
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeBusy (), 	Message := 'S130 - T01 - Bledny stan busy');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeDone (), 	Message := 'S130 - T02 - Bledny stan done');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeStatus (), 	Message := 'S130 - T03 - Bledny stan status');
		eActualMode				:= GVL_TestSaMContoller.fbMySaMController.GetMode ();
		AssertEquals (Expected := eNewMode, Actual := eActualMode, 						Message := 'S130 - T04 - Bledny stan');
		iStep	:= iStep + 10;
	140	:
		iStep	:= iStep + 10;
	150	:
		eNewMode			:= E_BaseMachineMode.Production;
		GVL_TestSaMContoller.fbMySaMController.Execute (iNumberOfCommand := eNewMode, eChangeCategory := E_SaMChangeCategory.eMode);
		iStep	:= iStep + 10;
	160	:	//pierwszy krok 
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeBusy (), 	Message := 'S160 - T01 - Bledny stan busy');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeDone (), 	Message := 'S160 - T02 - Bledny stan done');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeStatus (), Message := 'S160 - T03 - Bledny stan status');
		iStep	:= iStep + 10;
	170	://krok zmiany stanu
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeBusy (), 	Message := 'S170 - T01 - Bledny stan busy');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeDone (),	Message := 'S170 - T02 - Bledny stan done');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeStatus (), Message := 'S170 - T03 - Bledny stan status');
		iStep	:= iStep + 10;
	180	:	//ostani krok 
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeBusy (), 	Message := 'S180 - T01 - Bledny stan busy');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeDone (), 	Message := 'S180 - T02 - Bledny stan done');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeStatus (), 	Message := 'S180 - T03 - Bledny stan status');
		eActualMode				:= GVL_TestSaMContoller.fbMySaMController.GetMode ();
		AssertEquals (Expected := eNewMode, Actual := eActualMode, 						Message := 'S180 - T04 - Bledny stan');
		iStep	:= iStep + 10;
	190	:	//jest w produkcji wyłączamy manual i próba wejścia 
		GVL_TestSaMContoller.fbMySaMController.SetModeEnabled (iMode := E_BaseMachineMode.Manual, bValue := FALSE);
		iStep	:= iStep + 10;
	200	:
		eNewMode			:= E_BaseMachineMode.Manual;
		GVL_TestSaMContoller.fbMySaMController.Execute (iNumberOfCommand := eNewMode, eChangeCategory := E_SaMChangeCategory.eMode);
		iStep	:= iStep + 10;
	210	:	//pierwszy krok 
		Assertfalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeBusy (), 	Message := 'S210 - T01 - Bledny stan busy');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeDone (), 	Message := 'S210 - T02 - Bledny stan done');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeStatus (), Message := 'S210 - T03 - Bledny stan status');
		iStep	:= iStep + 10;
	220	:	//jest w produkcji włączamy manual i próba wejścia 
		GVL_TestSaMContoller.fbMySaMController.SetModeEnabled (iMode := E_BaseMachineMode.Manual, bValue := TRUE);
		iStep	:= iStep + 10;
	230	:
		eNewMode			:= E_BaseMachineMode.Manual;
		GVL_TestSaMContoller.fbMySaMController.Execute (iNumberOfCommand := eNewMode, eChangeCategory := E_SaMChangeCategory.eMode);
		iStep	:= iStep + 10;
	240	:	//pierwszy krok 
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeBusy (), 	Message := 'S240 - T01 - Bledny stan busy');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeDone (), 	Message := 'S240 - T02 - Bledny stan done');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeStatus (), Message := 'S240 - T03 - Bledny stan status');
		iStep	:= iStep + 10;
	250	://krok zmiany stanu
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeBusy (), 	Message := 'S250 - T01 - Bledny stan busy');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeDone (),	Message := 'S250 - T02 - Bledny stan done');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeStatus (), Message := 'S250 - T03 - Bledny stan status');
		iStep	:= iStep + 10;
	260	:	//ostani krok 
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeBusy (), 	Message := 'S260 - T01 - Bledny stan busy');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeDone (), 	Message := 'S260 - T02 - Bledny stan done');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeModeStatus (), 	Message := 'S260 - T03 - Bledny stan status');
		eActualMode				:= GVL_TestSaMContoller.fbMySaMController.GetMode ();
		AssertEquals (Expected := eNewMode, Actual := eActualMode, 						Message := 'S260 - T04 - Bledny stan');
		iStep	:= iStep + 10;
	270	:
		eNewMode			:= E_BaseMachineMode.Production;
		GVL_TestSaMContoller.fbMySaMController.Execute (iNumberOfCommand := eNewMode, eChangeCategory := E_SaMChangeCategory.eMode);
		iStep	:= iStep + 10;
	280	:	//pierwszy krok 
		iStep	:= iStep + 10;
	290	://krok zmiany stanu
		iStep	:= iStep + 10;
	300	:	//ostani krok 
		eActualMode				:= GVL_TestSaMContoller.fbMySaMController.GetMode ();
		AssertEquals (Expected := eNewMode, Actual := eActualMode, 						Message := 'S300 - T04 - Bledny stan');
		iStep	:= iStep + 10;
	310	:
		TcUnit.TEST_FINISHED ();
	END_CASE	
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="T03_PrzelaczanieStanow" Id="{7da41193-38df-4334-8d72-ec5210b40435}">
      <Declaration><![CDATA[METHOD PRIVATE T03_PrzelaczanieStanow
VAR_INST
	iStep			: INT;
	eNewState		: E_BaseMachineState;
	eActualState	: E_BaseMachineState;

END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF (TcUnit.TEST_ORDERED ('T04_TestZmianyStanow')) THEN
	GVL_TestSaMContoller.fbMySaMController.ExecuteEveryCycle_Test ();
	GVL_TestSaMContoller.fbMySaMController.ExecuteEveryCycle_Operation ();
	GVL_TestSaMContoller.fbMySaMController.ExecuteEveryCycle_Status ();
	GVL_TestSaMContoller.fbMySaMController.ExecuteEveryCycle_Error ();
	CASE iStep OF
	0	:
		itest	:= 4;
(*	*)	eNewState			:= E_BaseMachineState.Aborting;
		GVL_TestSaMContoller.fbMySaMController.Execute (iNumberOfCommand := E_SaMCommandChangeState.Abort, eChangeCategory := E_SaMChangeCategory.eState);
		iStep	:= iStep + 10;
	10	:	//pierwszy krok 
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateBusy (), 		Message := 'S10 - T01 - Bledny stan busy');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateDone (), 		Message := 'S10 - T02 - Bledny stan done');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateStatus (), 	Message := 'S10 - T03 - Bledny stan status');
		iStep	:= iStep + 10;
	20	://krok zmiany stanu
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateBusy (), 		Message := 'S20 - T01 - Bledny stan busy');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateDone (),		Message := 'S20 - T02 - Bledny stan done');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateStatus (), 	Message := 'S20 - T03 - Bledny stan status');
		iStep	:= iStep + 10;
	30	:	//ostani krok 
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateBusy (), 		Message := 'S30 - T01 - Bledny stan busy');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateDone (), 		Message := 'S30 - T02 - Bledny stan done');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateStatus (), 	Message := 'S30 - T03 - Bledny stan status');
		eActualState				:= GVL_TestSaMContoller.fbMySaMController.GetState ();
		AssertEquals (Expected := eNewState, Actual := eActualState, 						Message := 'S30 - T04 - Bledny stan');
		iStep	:= iStep + 10;
	40	:
		iStep	:= iStep + 10;
	50	:	
(*	*)	eNewState	:= E_BaseMachineState.Aborted;
		GVL_TestSaMContoller.fbMySaMController.ChangeStateTo (eNewState := eNewState);
		iStep	:= iStep + 10;
	60	:	//pierwszy krok 
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateBusy (), 		Message := 'S60 - T01 - Bledny stan busy');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateDone (), 		Message := 'S60 - T02 - Bledny stan done');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateStatus (), 	Message := 'S60 - T03 - Bledny stan status');
		iStep	:= iStep + 10;
	70	://krok zmiany stanu
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateBusy (), 		Message := 'S70 - T01 - Bledny stan busy');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateDone (),		Message := 'S70 - T02 - Bledny stan done');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateStatus (), 	Message := 'S70 - T03 - Bledny stan status');
		iStep	:= iStep + 10;
	80	:	//ostani krok 
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateBusy (), 		Message := 'S80 - T01 - Bledny stan busy');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateDone (), 		Message := 'S80 - T02 - Bledny stan done');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateStatus (), 	Message := 'S80 - T03 - Bledny stan status');
		eActualState				:= GVL_TestSaMContoller.fbMySaMController.GetState ();
		AssertEquals (Expected := eNewState, Actual := eActualState, 						Message := 'S80 - T04 - Bledny stan');
		iStep	:= iStep + 10;
	90	:
		iStep	:= iStep + 10;
	100	:
(*	*)	eNewState			:= E_BaseMachineState.Clearing;
		GVL_TestSaMContoller.fbMySaMController.Execute (iNumberOfCommand := E_SaMCommandChangeState.Clear, eChangeCategory := E_SaMChangeCategory.eState);
		iStep	:= iStep + 10;
	110	:	//pierwszy krok 
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateBusy (), 		Message := 'S110 - T01 - Bledny stan busy');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateDone (), 		Message := 'S110 - T02 - Bledny stan done');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateStatus (), 	Message := 'S110 - T03 - Bledny stan status');
		iStep	:= iStep + 10;
	120	://krok zmiany stanu
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateBusy (), 		Message := 'S120 - T01 - Bledny stan busy');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateDone (),		Message := 'S120 - T02 - Bledny stan done');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateStatus (), 	Message := 'S120 - T03 - Bledny stan status');
		iStep	:= iStep + 10;
	130	:	//ostani krok 
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateBusy (), 		Message := 'S130 - T01 - Bledny stan busy');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateDone (), 		Message := 'S130 - T02 - Bledny stan done');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateStatus (), 	Message := 'S130 - T03 - Bledny stan status');
		eActualState				:= GVL_TestSaMContoller.fbMySaMController.GetState ();
		AssertEquals (Expected := eNewState, Actual := eActualState, 						Message := 'S130 - T04 - Bledny stan');
		iStep	:= iStep + 10;
	140	:
		iStep	:= iStep + 10;
	150	:
(*	*)	eNewState			:= E_BaseMachineState.Stopped;
		GVL_TestSaMContoller.fbMySaMController.ChangeStateTo (eNewState := eNewState);
		iStep	:= iStep + 10;		
	160	:	//pierwszy krok 
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateBusy (), 		Message := 'S160 - T01 - Bledny stan busy');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateDone (), 		Message := 'S160 - T02 - Bledny stan done');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateStatus (), 	Message := 'S160 - T03 - Bledny stan status');
		iStep	:= iStep + 10;
	170	://krok zmiany stanu
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateBusy (), 		Message := 'S170 - T01 - Bledny stan busy');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateDone (),		Message := 'S170 - T02 - Bledny stan done');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateStatus (), 	Message := 'S170 - T03 - Bledny stan status');
		iStep	:= iStep + 10;
	180	:	//ostani krok 
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateBusy (), 		Message := 'S180 - T01 - Bledny stan busy');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateDone (), 		Message := 'S180 - T02 - Bledny stan done');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateStatus (), 	Message := 'S180 - T03 - Bledny stan status');
		eActualState				:= GVL_TestSaMContoller.fbMySaMController.GetState ();
		AssertEquals (Expected := eNewState, Actual := eActualState, 						Message := 'S180 - T04 - Bledny stan');
		iStep	:= iStep + 10;
	190	:	//przjescie do aborting
(*	*)	eNewState			:= E_BaseMachineState.Aborting;
		GVL_TestSaMContoller.fbMySaMController.Execute (iNumberOfCommand := E_SaMCommandChangeState.Abort, eChangeCategory := E_SaMChangeCategory.eState);
		iStep	:= iStep + 10;
	200	:	//pierwszy krok 
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateBusy (), 		Message := 'S200 - T01 - Bledny stan busy');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateDone (), 		Message := 'S200 - T02 - Bledny stan done');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateStatus (), 	Message := 'S200 - T03 - Bledny stan status');
		iStep	:= iStep + 10;
	210	://krok zmiany stanu
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateBusy (), 		Message := 'S210 - T01 - Bledny stan busy');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateDone (),		Message := 'S210 - T02 - Bledny stan done');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateStatus (), 	Message := 'S210 - T03 - Bledny stan status');
		iStep	:= iStep + 10;
	220	:	//ostani krok 
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateBusy (), 		Message := 'S220 - T01 - Bledny stan busy');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateDone (), 		Message := 'S220 - T02 - Bledny stan done');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateStatus (), 	Message := 'S220 - T03 - Bledny stan status');
		eActualState				:= GVL_TestSaMContoller.fbMySaMController.GetState ();
		AssertEquals (Expected := eNewState, Actual := eActualState, 						Message := 'S220 - T04 - Bledny stan');
		iStep	:= iStep + 10;
	230	:
		iStep	:= iStep + 10;
	240	:	
(*	*)	eNewState			:= E_BaseMachineState.Aborted;
		GVL_TestSaMContoller.fbMySaMController.ChangeStateTo (eNewState := eNewState);
		iStep	:= iStep + 10;		
	250	:	//pierwszy krok 
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateBusy (), 		Message := 'S250 - T01 - Bledny stan busy');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateDone (), 		Message := 'S250 - T02 - Bledny stan done');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateStatus (), 	Message := 'S250 - T03 - Bledny stan status');
		iStep	:= iStep + 10;
	260	://krok zmiany stanu
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateBusy (), 		Message := 'S260 - T01 - Bledny stan busy');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateDone (),		Message := 'S260 - T02 - Bledny stan done');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateStatus (), 	Message := 'S260 - T03 - Bledny stan status');
		iStep	:= iStep + 10;
	270	:	//ostani krok 
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateBusy (), 		Message := 'S270 - T01 - Bledny stan busy');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateDone (), 		Message := 'S270 - T02 - Bledny stan done');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateStatus (), 	Message := 'S270 - T03 - Bledny stan status');
		eActualState				:= GVL_TestSaMContoller.fbMySaMController.GetState ();
		AssertEquals (Expected := eNewState, Actual := eActualState, 						Message := 'S270 - T04 - Bledny stan');
		iStep	:= iStep + 10;
	280	:
		GVL_TestSaMContoller.fbMySaMController.SetStateEnabledInMode (iMode := E_BaseMachineMode.Production, iState := E_BaseMachineState.Clearing, bValue := FALSE);
		iStep	:= iStep + 10;
	290	:
(*	*)	eNewState			:= E_BaseMachineState.Clearing;
		GVL_TestSaMContoller.fbMySaMController.Execute (iNumberOfCommand := E_SaMCommandChangeState.Clear, eChangeCategory := E_SaMChangeCategory.eState);
		iStep	:= iStep + 10;
	300	:	//pierwszy krok 
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateBusy (), 		Message := 'S300 - T01 - Bledny stan busy');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateDone (), 		Message := 'S300 - T02 - Bledny stan done');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateStatus (), 	Message := 'S300 - T03 - Bledny stan status');
		iStep	:= iStep + 10;
	310	:
		GVL_TestSaMContoller.fbMySaMController.SetStateEnabledInMode (iMode := E_BaseMachineMode.Production, iState := E_BaseMachineState.Clearing, bValue := TRUE);
		iStep	:= iStep + 10;
	320	:
(*	*)	eNewState			:= E_BaseMachineState.Clearing;
		GVL_TestSaMContoller.fbMySaMController.Execute (iNumberOfCommand := E_SaMCommandChangeState.Clear, eChangeCategory := E_SaMChangeCategory.eState);
		iStep	:= iStep + 10;
	330	:	//pierwszy krok 
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateBusy (), 		Message := 'S330 - T01 - Bledny stan busy');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateDone (), 		Message := 'S330 - T02 - Bledny stan done');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateStatus (), 	Message := 'S330 - T03 - Bledny stan status');
		iStep	:= iStep + 10;
	340	://krok zmiany stanu
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateBusy (), 		Message := 'S340 - T01 - Bledny stan busy');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateDone (),		Message := 'S340 - T02 - Bledny stan done');
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateStatus (), 	Message := 'S340 - T03 - Bledny stan status');
		iStep	:= iStep + 10;
	350	:	//ostani krok 
		AssertFalse (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateBusy (), 		Message := 'S350 - T01 - Bledny stan busy');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateDone (), 		Message := 'S350 - T02 - Bledny stan done');
		AssertTrue (Condition := GVL_TestSaMContoller.fbMySaMController.IsChangeStateStatus (), 	Message := 'S350 - T03 - Bledny stan status');
		eActualState				:= GVL_TestSaMContoller.fbMySaMController.GetState ();
		AssertEquals (Expected := eNewState, Actual := eActualState, 						Message := 'S350 - T04 - Bledny stan');
		iStep	:= iStep + 10;
	360	:
		TcUnit.TEST_FINISHED ();
	END_CASE
END_IF
]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>